@@ -1,4 +1,8 @@
 
+2009-09-07  Chris Brannon <cmbrannon79@gmail.com>
+
+	* Switched to arch=('any').  Added twisted as optdepend.
+
 2009-08-05  Douglas Soares de Andrade  <douglas@archlinux.org>
 
 	* Updated for x86_64: 0.10
